# throwaway-agent-lab

./: .metadata.yaml  CONTRIBUTORS.org  EXPERIMENTS.org  README.md  README.org  TODO.org  package-lock.json  package.json  pyproject.toml  setup.org  setup.sh  test_pyodide.js
docs/: EXPERIMENT_DRIVEN_DEV.org  RELATED_PATTERNS.md  TOOLS_STRATEGY.org
examples/tool_demos/: faker_demo.py  qrcode_demo.py
experiments/: new_experiment.sh
experiments/001-qrcode-generation/: README.org  demo.py
experiments/002-sqlite-data-analysis/: README.org  demo.py
experiments/003-faker-synthetic-data/: README.org  demo.py
experiments/004-beautifulsoup-web-parsing/: README.org  demo.py
experiments/005-pillow-image-processing/: README.org  demo.py
src/: async_bridge.js  durable_exec.py  vfs_concept.py
src/sandbox/: demo_runner.js
tests/integration/: sandbox.test.js
tests/unit/: test_basic.py
